# pyup

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pyup/: __init__.py  cli.py  configure.py  pyup.py  run.py
