[tool.poetry]
name = "pyup"
version = "0.1.2"
description = "Caddy file server in Python with many additional features!"
authors = ["Alyetama <malyetama@pm.me>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pymongo = {version = ">=4.0.2", extras = ["srv"]}
paramiko = ">=2.10.2"
pyperclip = ">=1.8.2"
PyYAML = ">=6.0"
loguru = ">=0.5.3"
tqdm = ">=4.62.3"
rich = ">=10.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyup = "pyup:cli.main"
